add basic elements

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <h1>Hello World</h1>
+      <p>hey how're you doing world</p>
+    </main>
+  </body>
 </html>
